# eo-kit

./: .gitignore  Cargo.toml  LICENSE  README.md  compare.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: CI.yml
docs/source/: conf.py  gaussian_processes.rst  index.rst  introduction.rst  sav_golay.rst  smoothers.rst  whittaker.rst
eo_wrapper/EOkit/: array_utils.py  gaussian_processes.py  gp.py
eo_wrapper/EOkit/EOkit/: __init__.py  ffi.py
eo_wrapper/EOkit/smoothers/: sav_golay.py  whittaker.py
src/: lib.rs
src/gaussian_processes/: gp.rs  mod.rs
src/math_utils/: convolve.rs  mod.rs
src/smoothers/: mod.rs  sav_golay.rs  whittaker.rs
tests/: mod.rs
tests/unit/: mod.rs  test_convolve.rs  test_smoothers.rs  test_whittaker.rs
