[package]
name = "eo-kit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "EOkit"
crate-type = ["cdylib"]

[dependencies]
tokio={version="1.17.0",features=["full"]}
rusty-machine ="0.5.4"
futures = "0.3.21"

[package.metadata.maturin]
python-source = "eo_wrapper"

[profile.release]
lto = true