[package]
name = "eo-kit"
version = "0.1.1"
edition = "2018"


[lib]
name = "EOkit"
crate-type = ["cdylib","lib"]

[dependencies]
tokio={version="1.17.0",features=["full"]}
rusty-machine ="0.5.4"
futures = "0.3.21"
sprs="0.10.0"
sprs-ldl = "0.9.0"
nalgebra= "0.30.1"
# ndarray= "0.15.4"
# ndarray-linalg ="0.14.1"

[package.metadata.maturin]
python-source = "eo_wrapper"

[profile.release]
lto = true