[build-system]
requires = ["maturin>=0.12,<0.13,cffi"]
build-backend = "maturin"

[project]
name = "eo-kit"
dependencies = ["cffi"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]



[tool.maturin]
bindings = "cffi"