[build-system]
requires = ["maturin>=0.12,<0.13,cffi"]
build-backend = "maturin"

[project]
name = "eo-kit"
dependencies = ["cffi"]
requires-python = ">=3.6"
description  = "A multithreaded library for efficient Earth observation algorithms."
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research"
]

author = "Andrew Bowell"
url = "https://github.com/AnBowell/eo-kit"

[tool.maturin]
bindings = "cffi"